Criando a view e os acessos aos dados da mesma
