# models/library.js
@@ -1,7 +1,11 @@
 // ----------------- Import de dependências ----------------- //
 const mongoose = require('mongoose');
-const GameSchemaKeys = require('./game').GameSchemaKeys;
+const Game = require('./game');
 
+// ------------------- Objetos Exportadas ------------------- //
+const viewName = 'library';
+
+//Schemas Filhos
 const LibraryMediaSchema = new mongoose.Schema({
     _id: {
         type: mongoose.Schema.Types.ObjectId,
@@ -38,237 +42,12 @@ const LibraryKeys = Object.assign(
         mediaNintendoSwitch: [LibraryMediaSchema],
         mediaNintendo3ds: [LibraryMediaSchema]
     },
-    GameSchemaKeys);
+    Game.schemaKeys);
 
 const LibrarySchema = new mongoose.Schema(LibraryKeys);
 
-const createView = function (db) {
-    db.createCollection(
-        'library',
-        {
-            viewOn: 'games',
-            pipeline: [
-                { $sort: { 'createdAt': -1 } },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'PS3'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaPs3'
-                    }
-                },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'PS4'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaPs4'
-                    }
-                },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'XBOX360'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaXbox360'
-                    }
-                },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'XBOXONE'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaXboxOne'
-                    }
-                },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'NINTENDO3DS'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaNintendo3ds'
-                    }
-                },
-                {
-                    $lookup: {
-                        from: 'media',
-                        let: { game_id: '$_id' },
-                        pipeline: [
-                            {
-                                $match: {
-                                    $expr: {
-                                        $and: [
-                                            { $eq: ['$platform', 'NINTENDOSWITCH'] },
-                                            { $eq: ['$game', '$$game_id'] }
-                                        ]
-                                    }
-                                }
-                            },
-                            { $project: { _id: 1, owner: 1 } },
-                            { $lookup: { from: 'users', localField: 'owner', foreignField: '_id', as: 'ownerData' } },
-                            { $unwind: '$ownerData' },
-                            {
-                                $addFields: {
-                                    'ownerName': '$ownerData.name',
-                                    'ownerState': '$ownerData.state',
-                                    'ownerCity': '$ownerData.city'
-                                }
-                            },
-                            { $project: { 'ownerData': 0 } }
-                        ],
-                        as: 'mediaNintendoSwitch'
-                    }
-                },
-                {
-                    $match: {
-                        $or: [
-                            { 'mediaPs3': { $exists: true, $ne: [] } },
-                            { 'mediaPs4': { $exists: true, $ne: [] } },
-                            { 'mediaXbox360': { $exists: true, $ne: [] } },
-                            { 'mediaXboxOne': { $exists: true, $ne: [] } },
-                            { 'mediaNintendo3ds': { $exists: true, $ne: [] } },
-                            { 'mediaNintendoSwitch': { $exists: true, $ne: [] } }
-                        ]
-                    }
-                },
-                {
-                    $addFields: {
-                        'mediaPs3Count': {
-                            $size: '$mediaPs3'
-                        },
-                        'mediaPs4Count': {
-                            $size: '$mediaPs4'
-                        },
-                        'mediaXbox360Count': {
-                            $size: '$mediaXbox360'
-                        },
-                        'mediaXboxOneCount': {
-                            $size: '$mediaXboxOne'
-                        },
-                        'mediaNintendo3dsCount': {
-                            $size: '$mediaNintendo3ds'
-                        },
-                        'mediaNintendoSwitchCount': {
-                            $size: '$mediaNintendoSwitch'
-                        }
-                    }
-                }
-            ]
-        });
-};
-
 // --------------------- Module Exports --------------------- //
 module.exports = {
-    'model': mongoose.model('Library', LibrarySchema, 'library'),
-    'createView': createView
+    'viewName': viewName,
+    'model': mongoose.model('Library', LibrarySchema, viewName)
 };
