# routes.js
@@ -8,6 +8,7 @@ const validator = require('./helpers/validator');
 
 // --------------- Import de regras de negócio -------------- //
 const brLibrary = require('./business-rule/br-library');
+const brTenancy = require('./business-rule/br-tenancy');
 const brAccess = require('./business-rule/br-access');
 const brMedia = require('./business-rule/br-media');
 const brUser = require('./business-rule/br-user');
@@ -16,6 +17,7 @@ const brLoan = require('./business-rule/br-loan');
 
 // ------------------ Import de repositórios ---------------- //
 const repoLibrary = require('./repositories/repo-library');
+const repoTenancy = require('./repositories/repo-tenancy');
 const repoToken = require('./repositories/repo-token');
 const repoState = require('./repositories/repo-state');
 const repoMedia = require('./repositories/repo-media');
@@ -104,6 +106,10 @@ const routes = function (app) {
       brLoan.update, repoLoan.update, defMethods.requestHandler
     );
 
+  app.route('/tenancy')
+    .get(modelInjector, privateRoute, validator('tenancy', 'search', 'query'), brTenancy.search, repoTenancy.search, defMethods.requestHandler)
+
+  app.route('/tenancy/:_id').get(modelInjector, privateRoute, validator('tenancy', 'id', 'params'), repoTenancy.findById, defMethods.requestHandler);
 };
 
 // --------------------- Module Exports --------------------- //
