# swagger.yaml
@@ -595,6 +595,62 @@ paths:
         '500':
           $ref: '#/components/responses/500'
 
+  /tenancy:
+    get:
+      tags:
+        - Tenancy
+      summary: Rota de listagem de locações
+      security:
+        - authenticationUser: []
+      parameters:
+        - in: query
+          name: _id
+          description: ObjectId da mídia
+          schema:
+            type: string
+        - in: query
+          name: platform
+          description: Plataforma da mídia
+          schema:
+            type: string
+            enum: [PS3, PS4, XBOX360, XBOXONE, NINTENDO3DS, NINTENDOSWITCH]
+        - in: query
+          name: game
+          description: ObjectId do jogo
+          schema:
+            type: string
+        - $ref: '#/components/parameters/limitParam'
+        - $ref: '#/components/parameters/pageParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/200List'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '500':
+          $ref: '#/components/responses/500'
+  /tenancy/{id}:
+    parameters:
+      - $ref: '#/components/parameters/idParam'
+    get:
+      tags:
+        - Tenancy
+      summary: Rota de detalhamento de locação
+      security:
+        - authenticationUser: []
+      responses:
+        '200':
+          $ref: '#/components/responses/200Detail'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '404':
+          $ref: '#/components/responses/404'
+        '500':
+          $ref: '#/components/responses/500'
+
 components:
   securitySchemes:
     authenticationUser:
